@@ -1,3 +1,10 @@
+2023-03-09 Roy Hills <royhills@hotmail.com>
+
+	* arp-scan.c, arp-scan.h, arp-scan.1.dist: Added the ${IPnum} output
+	  field, which displays the host IPv4 address as a 32-bit integer.
+	  This permits sorting by IP address using simple numeric comparison.
+	  Thanks to @gspannu for the feature request.
+
 2023-02-26 Roy Hills <royhills@hotmail.com>
 
 	* arp-scan.c: Change the informational message about the interface
